# superbryn-agent-sync

./: .bumpversion.cfg  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
superbryn/: __init__.py  canonical.py  client.py  errors.py  manifest.py
superbryn/codescan/: __init__.py  _scan.py
superbryn/livekit/: __init__.py
superbryn/pipecat/: __init__.py
superbryn/pipecat/extractors/: __init__.py  _shared.py  llm.py  stt.py  tts.py
superbryn/schemas/: agent_sync_manifest.schema.json
superbryn/translators/: __init__.py  _util.py  bland.py  bolna.py  elevenlabs.py  generic.py  retell.py  vapi.py
tests/: test_adapters.py  test_adapters_wrapped.py  test_async_client.py  test_canonical.py  test_client.py  test_codescan.py  test_manifest.py  test_package.py  test_translators.py
